Fixed mailchimp input box broken on Firefox

--- a/css/app.css
+++ b/css/app.css
@@ -425,7 +425,6 @@ a:hover, a:focus, .link-cta:hover, .link-cta:focus{
   }
 }
 
-
 #mc_embed_signup {
   margin-top: 40px;
 }
@@ -459,8 +458,10 @@ a:hover, a:focus, .link-cta:hover, .link-cta:focus{
 }
 
 #mc_embed_signup .mc-field-group #mce-EMAIL {
-  padding: 26px 20px 26px 20px;
+  padding: 0px 20px 0px 20px;
   border: 0;
+  height: 52px;
+  font-size: 16px; /* 16px is the treshold for iPhone zoom */
 }
 
 #wrapper-signup-input input{
